--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.1.1",
     "angular-bootstrap-md": "^6.1.4",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
